<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.contact.AddContacts">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Name"
        android:id="@+id/id_Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone"
        android:id="@+id/id_phone"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Email"
        android:id="@+id/id_Relative"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="72dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Save"
        android:id="@+id/id_Save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="button_Save" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_EditEmail"
        android:layout_alignBaseline="@+id/id_Relative"
        android:layout_above="@+id/id_Save"
        android:layout_toEndOf="@+id/id_Relative"
        android:text="@string/text_EditEmail" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_EditPhone"
        android:layout_alignBaseline="@+id/id_phone"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/id_phone"
        android:text="@string/text_EditPhone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_EditName"
        android:layout_alignTop="@+id/id_Name"
        android:layout_alignBaseline="@+id/id_Name"
        android:layout_toEndOf="@+id/id_Name"
        android:text="@string/text_EditName" />
</RelativeLayout>
