<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.user.contact.Results"
    android:id="@+id/id_Relative">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_SearchedName"
        android:id="@+id/id_SearchedName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_SearchedNumber"
        android:id="@+id/id_SearchedNumber"
        android:layout_below="@+id/id_SearchedName"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_SearchedEmail"
        android:id="@+id/id_SearchedEmail"
        android:layout_below="@+id/id_SearchedNumber"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Call"
        android:id="@+id/id_Call"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="109dp"
        android:onClick="button_Call" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_EmailResult"
        android:id="@+id/id_Email"
        android:layout_alignTop="@+id/id_Call"
        android:layout_toEndOf="@+id/id_Call"
        android:layout_marginStart="80dp"
        android:onClick="button_Email" />
</RelativeLayout>
